[gd_scene load_steps=27 format=3 uid="uid://casagqutbfyv6"]

[ext_resource type="Script" uid="uid://blhbji210er4q" path="res://crossbow.gd" id="1_seim3"]
[ext_resource type="AudioStream" uid="uid://c8riien6g2ofy" path="res://Player/weapon/ALL/Crossbow/crossbow-firing-95020.mp3" id="2_yg30w"]
[ext_resource type="ArrayMesh" uid="uid://g8nhxbgs3sh7" path="res://Player/weapon/ALL/HeavyCrossbow/heavyxbow.res" id="3_seim3"]
[ext_resource type="Shader" uid="uid://lm1gw4o3cyyh" path="res://shaders/ursc_1.3.0/addons/ursc/spatial/standard_opaque.gdshader" id="5_rofvw"]
[ext_resource type="Texture2D" uid="uid://hio7ka8q4l81" path="res://Player/weapon/ALL/HeavyCrossbow/base2.png" id="6_yg30w"]
[ext_resource type="ArrayMesh" uid="uid://unepod5rwmun" path="res://Player/weapon/ALL/Belt/bolt.res" id="7_fy2dd"]
[ext_resource type="Texture2D" uid="uid://udidug1u1tlm" path="res://Player/weapon/ALL/Belt/Material_Base_color.png" id="8_gw1vj"]
[ext_resource type="Script" uid="uid://dwhlx7r1lhgny" path="res://ray.gd" id="9_fgoaw"]
[ext_resource type="AudioStream" uid="uid://6cnfpmt5x52g" path="res://Player/weapon/ALL/HeavyCrossbow/heavy_equip.wav" id="9_seim3"]
[ext_resource type="Script" uid="uid://bb3ghyy64k2bd" path="res://addons/godot_state_charts/state_chart.gd" id="10_tqfvm"]
[ext_resource type="Script" uid="uid://clt3bkcujiepo" path="res://addons/godot_state_charts/compound_state.gd" id="11_yokia"]
[ext_resource type="Script" uid="uid://1xhujeketj0r" path="res://addons/godot_state_charts/atomic_state.gd" id="12_s76p3"]
[ext_resource type="Script" uid="uid://8kg3tepcr415" path="res://addons/godot_state_charts/transition.gd" id="13_5i2im"]
[ext_resource type="Script" uid="uid://b7i6og46fxorp" path="res://xbow_idle.gd" id="14_teq14"]
[ext_resource type="Script" uid="uid://bj22mnnihr537" path="res://xbow_shoot.gd" id="15_om7wy"]
[ext_resource type="Script" uid="uid://b0jyy5d8q8irl" path="res://xbow_reload.gd" id="16_jjqaa"]
[ext_resource type="Script" uid="uid://44l61k4jks6l" path="res://xbow_block.gd" id="17_yg30w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cx7js"]
render_priority = 0
shader = ExtResource("5_rofvw")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("6_yg30w")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_npafi"]
render_priority = 0
shader = ExtResource("5_rofvw")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("8_gw1vj")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="Animation" id="Animation_0i1vk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.08, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D/bolt:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.32274e-09, -0.000365422, 0.00624091)]
}

[sub_resource type="Animation" id="Animation_sygcw"]
resource_name = "reload"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.08, 0, 0), Vector3(0, -0.755175, 0), Vector3(-0.08, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173), Vector3(-0.794945, -1.07762, 0.122173), Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_0s0e8"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.08, 0, 0), Vector3(-0.0712729, 0.00345627, 0.0138251), Vector3(-0.0261773, 0.0213159, 0.0852636), Vector3(0.021, 0.04, 0.16), Vector3(0.0552832, 0.0535775, 0.21431), Vector3(0.0744536, 0.0611697, 0.244679), Vector3(0.0828181, 0.0644824, 0.25793), Vector3(0.0827742, 0.064465, 0.25786), Vector3(0.0753317, 0.0615175, 0.24607), Vector3(0.0619424, 0.0562148, 0.224859), Vector3(0.0482719, 0.0508008, 0.203203), Vector3(0.0260967, 0.0420185, 0.168074), Vector3(0.004291, 0.0333826, 0.13353), Vector3(-0.0165287, 0.0251372, 0.100549), Vector3(-0.043971, 0.0142689, 0.0570756), Vector3(-0.08, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173), Vector3(-1.61204, -3.14159, 0.128292), Vector3(-1.69755, -3.14159, 0.140979), Vector3(-1.80252, -3.14159, 0.156553), Vector3(-1.91826, -3.14159, 0.173726), Vector3(-2.00312, -3.14159, 0.186316), Vector3(-2.15897, -3.14159, 0.20944), Vector3(-2.24067, -3.14159, 0.221562), Vector3(-2.26313, -3.14159, 0.224894), Vector3(-2.21554, -3.14159, 0.217833), Vector3(-2.17413, -3.14159, 0.211689), Vector3(-2.10691, -3.14159, 0.201717), Vector3(-1.96731, -3.14159, 0.181003), Vector3(-1.787, -3.14159, 0.154251), Vector3(-1.62961, -3.14159, 0.130899), Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D/bolt:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0674242),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1.32274e-09, -0.000365422, 0.00624091), Vector3(-0.000411357, -0.126616, -0.00731001), Vector3(1.32274e-09, -0.000365422, 0.00624091)]
}

[sub_resource type="Animation" id="Animation_cx7js"]
resource_name = "equip"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.08, -0.932759, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.964036, -1.57079, -0.467312), Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/AudioStreamPlayer3D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_seim3")
}],
"times": PackedFloat32Array(0.333333)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_seim3"]
resource_name = "raise_xbow"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.500568),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.08, 0, 0), Vector3(-0.451, 0.145, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173), Vector3(-1.09024, -0.734603, -1.03471)]
}

[sub_resource type="Animation" id="Animation_yg30w"]
resource_name = "block"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.451, 0.145, 0), Vector3(-0.451, 0.145, 0.333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.24871),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.09024, -0.734603, -1.03471), Vector3(-1.04545, -0.802851, -1.11352)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sygcw"]
_data = {
&"RESET": SubResource("Animation_0i1vk"),
&"block": SubResource("Animation_yg30w"),
&"equip": SubResource("Animation_cx7js"),
&"raise_xbow": SubResource("Animation_seim3"),
&"reload": SubResource("Animation_sygcw"),
&"shoot": SubResource("Animation_0s0e8")
}

[node name="heavy_crossbow" type="Node3D"]
script = ExtResource("1_seim3")
two_handed = true
swing_sound = ExtResource("2_yg30w")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-11.9106, 1.46247, 1.10128e-10, -5.29401e-06, -4.31163e-05, 12, 1.46247, 11.9106, 4.34399e-05, -0.08, 0, 0)
layers = 2
gi_mode = 2
mesh = ExtResource("3_seim3")
surface_material_override/0 = SubResource("ShaderMaterial_cx7js")

[node name="bolt" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(5.43147e-06, -6.55869e-08, 1.5, -1.5, 5.47766e-06, 5.43147e-06, -5.47767e-06, -1.5, -6.55671e-08, 1.32274e-09, -0.000365422, 0.00624091)
layers = 2
mesh = ExtResource("7_fy2dd")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_npafi")

[node name="RayCast3D" type="RayCast3D" parent="MeshInstance3D"]
transform = Transform3D(-0.1, -4.41165e-08, -7.13123e-05, -7.13123e-05, -3.59301e-07, 0.1, -4.43728e-08, 0.1, 3.59269e-07, 0.000363517, -4.46519e-05, 0.00460258)
target_position = Vector3(0, 0, -100)
collision_mask = 6
collide_with_areas = true
script = ExtResource("9_fgoaw")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="MeshInstance3D"]
transform = Transform3D(-0.0827118, -3.67637e-08, 0.0101559, 0.0101559, -2.99416e-07, 0.0827118, 7.66328e-13, 0.0833333, 3.01666e-07, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sygcw")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("10_tqfvm")
metadata/_custom_type_script = "uid://bb3ghyy64k2bd"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("11_yokia")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("12_s76p3")

[node name="toShoot" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("13_5i2im")
to = NodePath("../../shoot")
event = &"shoot"
delay_in_seconds = "0.0"

[node name="toBlock" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("13_5i2im")
to = NodePath("../../block")
event = &"block"
delay_in_seconds = "0.0"

[node name="idle" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("14_teq14")

[node name="shoot" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("12_s76p3")

[node name="toReload" type="Node" parent="StateChart/CompoundState/shoot"]
script = ExtResource("13_5i2im")
to = NodePath("../../reload")
event = &"reload"
delay_in_seconds = "0.0"

[node name="shoot" type="Node" parent="StateChart/CompoundState/shoot" node_paths=PackedStringArray("weapon", "state_chart")]
script = ExtResource("15_om7wy")
weapon = NodePath("../../../..")
state_chart = NodePath("../../..")

[node name="reload" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("12_s76p3")

[node name="toIdle" type="Node" parent="StateChart/CompoundState/reload"]
script = ExtResource("13_5i2im")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="reload" type="Node" parent="StateChart/CompoundState/reload" node_paths=PackedStringArray("weapon", "state_chart")]
script = ExtResource("16_jjqaa")
weapon = NodePath("../../../..")
state_chart = NodePath("../../..")

[node name="block" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("12_s76p3")

[node name="toIdle" type="Node" parent="StateChart/CompoundState/block"]
script = ExtResource("13_5i2im")
to = NodePath("../../idle")
event = &"block_released"
delay_in_seconds = "0.0"

[node name="block" type="Node" parent="StateChart/CompoundState/block" node_paths=PackedStringArray("state_chart", "weapon")]
script = ExtResource("17_yg30w")
state_chart = NodePath("../../..")
weapon = NodePath("../../../../MeshInstance3D")

[connection signal="state_entered" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/block" to="StateChart/CompoundState/block/block" method="_on_block_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/block" to="StateChart/CompoundState/block/block" method="_on_block_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/block" to="StateChart/CompoundState/block/block" method="_on_block_state_processing"]
